--- a/sci-mathematics/msieve/ChangeLog
+++ b/sci-mathematics/msieve/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sci-mathematics/msieve
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/msieve/ChangeLog,v 1.8 2012/11/30 08:52:07 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/msieve/ChangeLog,v 1.9 2012/11/30 09:23:26 patrick Exp $
+
+  30 Nov 2012; Patrick Lauer <patrick@gentoo.org> +files/reduce-printf2.patch,
+  +files/reduce-printf3.patch, msieve-1.50-r4.ebuild:
+  Reducing output verbosity some more
 
 *msieve-1.50-r4 (30 Nov 2012)
 
