--- a/media-gfx/povray/ChangeLog
+++ b/media-gfx/povray/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/povray
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/povray/ChangeLog,v 1.135 2012/11/30 06:53:12 lavajoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/povray/ChangeLog,v 1.136 2012/11/30 09:37:39 jlec Exp $
+
+  30 Nov 2012; Justin Lecher <jlec@gentoo.org> povray-3.7.0_rc5-r1.ebuild,
+  metadata.xml:
+  sci takes it for now, please join
 
   30 Nov 2012; Joe Peterson <lavajoe@gentoo.org> metadata.xml:
   Reassign to maintainer-needed
