--- a/net-nntp/nzbget/ChangeLog
+++ b/net-nntp/nzbget/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-nntp/nzbget
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-nntp/nzbget/ChangeLog,v 1.49 2012/11/24 04:24:25 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-nntp/nzbget/ChangeLog,v 1.50 2012/11/30 09:41:59 radhermit Exp $
+
+*nzbget-9.0_pre518 (30 Nov 2012)
+
+  30 Nov 2012; Tim Harder <radhermit@gentoo.org> +nzbget-9.0_pre518.ebuild:
+  Version bump.
 
 *nzbget-9.0_pre511 (24 Nov 2012)
 
