--- a/net-nntp/nzbget/ChangeLog
+++ b/net-nntp/nzbget/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-nntp/nzbget
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-nntp/nzbget/ChangeLog,v 1.50 2012/11/30 09:41:59 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-nntp/nzbget/ChangeLog,v 1.51 2012/11/30 09:43:10 radhermit Exp $
+
+  30 Nov 2012; Tim Harder <radhermit@gentoo.org> -nzbget-9.0_pre477.ebuild,
+  -nzbget-9.0_pre497.ebuild, -files/nzbget-9.0_pre477-header.patch:
+  Remove old.
 
 *nzbget-9.0_pre518 (30 Nov 2012)
 
