--- a/sci-libs/shapelib/ChangeLog
+++ b/sci-libs/shapelib/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sci-libs/shapelib
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/shapelib/ChangeLog,v 1.24 2012/11/30 10:39:41 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/shapelib/ChangeLog,v 1.25 2012/11/30 10:40:14 ago Exp $
+
+  30 Nov 2012;  <ago@gentoo.org> shapelib-1.3.0-r1.ebuild:
+  Stable for x86, wrt bug #444664
 
   30 Nov 2012;  <ago@gentoo.org> shapelib-1.3.0-r1.ebuild:
   Stable for amd64, wrt bug #444664
