--- a/eclass/ChangeLog
+++ b/eclass/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for eclass directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.530 2012/11/30 11:40:15 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.531 2012/11/30 11:43:14 mgorny Exp $
+
+  30 Nov 2012; Michał Górny <mgorny@gentoo.org> python-utils-r1.eclass:
+  Support all EAPIs.
 
   30 Nov 2012; Michał Górny <mgorny@gentoo.org> python-r1.eclass,
   python-single-r1.eclass, python-utils-r1.eclass:
