--- a/app-misc/lirc/ChangeLog
+++ b/app-misc/lirc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-misc/lirc
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/lirc/ChangeLog,v 1.236 2012/11/30 13:56:26 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/lirc/ChangeLog,v 1.237 2012/11/30 14:00:24 ago Exp $
+
+  30 Nov 2012;  <ago@gentoo.org> -lirc-0.8.7.ebuild, -lirc-0.9.0.ebuild:
+  Remove old
 
   30 Nov 2012;  <ago@gentoo.org> lirc-0.9.0-r2.ebuild:
   Stable for x86, wrt bug #434322
