--- a/app-crypt/nwipe/ChangeLog
+++ b/app-crypt/nwipe/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-crypt/nwipe
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/nwipe/ChangeLog,v 1.4 2012/10/03 17:43:35 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/nwipe/ChangeLog,v 1.5 2012/11/30 14:16:01 ssuominen Exp $
+
+*nwipe-0.12 (30 Nov 2012)
+
+  30 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> +nwipe-0.12.ebuild:
+  Version bump.
 
 *nwipe-0.11 (03 Oct 2012)
 
