--- a/app-crypt/nwipe/ChangeLog
+++ b/app-crypt/nwipe/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-crypt/nwipe
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/nwipe/ChangeLog,v 1.5 2012/11/30 14:16:01 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/nwipe/ChangeLog,v 1.6 2012/11/30 14:16:36 ssuominen Exp $
+
+  30 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> -nwipe-0.10.ebuild,
+  -nwipe-0.11.ebuild:
+  old
 
 *nwipe-0.12 (30 Nov 2012)
 
