--- a/dev-util/hxtools/ChangeLog
+++ b/dev-util/hxtools/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/hxtools
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/hxtools/ChangeLog,v 1.2 2012/11/30 10:10:11 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/hxtools/ChangeLog,v 1.3 2012/11/30 14:54:14 scarabeus Exp $
+
+  30 Nov 2012; Tomáš Chvátal <scarabeus@gentoo.org> hxtools-20121125.ebuild:
+  Also depend on perl.
 
   30 Nov 2012; Tomáš Chvátal <scarabeus@gentoo.org> hxtools-20121125.ebuild:
   Silence repoman.
