--- a/net-libs/libkolab/ChangeLog
+++ b/net-libs/libkolab/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/libkolab
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libkolab/ChangeLog,v 1.7 2012/11/30 12:54:09 kensington Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libkolab/ChangeLog,v 1.8 2012/11/30 15:10:01 ago Exp $
+
+  30 Nov 2012; <ago@gentoo.org> libkolab-0.3.2.ebuild:
+  Stable for ppc, wrt bug #442394
 
   30 Nov 2012; Michael Palimaka <kensington@gentoo.org> libkolab-0.2.0.ebuild,
   libkolab-0.3.2.ebuild:
