--- a/app-backup/backintime/ChangeLog
+++ b/app-backup/backintime/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-backup/backintime
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-backup/backintime/ChangeLog,v 1.24 2015/02/27 10:06:49 xmw Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-backup/backintime/ChangeLog,v 1.25 2015/02/27 10:08:43 xmw Exp $
+
+*backintime-1.0.36-r2 (27 Feb 2015)
+
+  27 Feb 2015; Michael Weber <xmw@gentoo.org> +backintime-1.0.36-r2.ebuild,
+  -backintime-1.0.36-r1.ebuild:
+  Revbump for previous RDEPEND change
 
   27 Feb 2015; Michael Weber <xmw@gentoo.org> backintime-1.0.36-r1.ebuild:
   Add DEPEND on dbus-python (bug 522734, thanks Martin LORANG).
